--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-            <a class="navbar-brand" href="#/">ACME</a>
+            <a class="navbar-brand" href="#/"><img src="img/logo1.png" class="img-responsive" width="50%"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/services">Services</a>
                 </li>
-                <li><a href="#/pricing">Pricing Table</a>
+                <li><a href="#/subscriptions">Subscriptions</a>
                 </li>
                 <li><a href="#/about">About</a>
                 </li>
